--- a/index.html
+++ b/index.html
@@ -296,6 +296,22 @@
 
         // Initialiser la première étape
         showStep(currentStep);
+        <!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://formspree.io/f/xbljwabb"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
     </script>
 </body>
 </html>
