--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container">
         <h1>Enquête Interactive</h1>
         <h2>Vos besoins en nettoyage écologique</h2>
-        <form id="surveyForm" action="smonformulaire.ct.ws" method="POST">
+        <form id="surveyForm" action="https://formspree.io/f/xbljwabb" method="POST">
             <!-- Steps Indicator -->
             <div class="steps-indicator">
                 <div class="step-indicator active">1</div>
