--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         <h1>Enquête Interactive</h1>
         <h2>Vos besoins en nettoyage écologique</h2>
         <form id="surveyForm" action="https://formspree.io/f/xbljwabb" method="POST">
+             <input type="text" name="name" placeholder="Name" required>
+  <input type="email" name="email" placeholder="Email" required>
+  <textarea name="message" placeholder="Message" required></textarea>
+  <button type="submit">Submit</button>
             <!-- Steps Indicator -->
             <div class="steps-indicator">
                 <div class="step-indicator active">1</div>
