--- a/index.html
+++ b/index.html
@@ -207,13 +207,9 @@
                     <label for="email">Adresse e-mail :</label>
                     <input type="email" id="email" name="email" placeholder="exemple@domaine.com">
                 </div>
-                <div class="question">
-                    <label for="contact">Numéro de contact :</label>
-                    <input type="tel" id="contact" name="contact" placeholder="Entrez votre numéro de téléphone">
-                </div>
                 <div class="navigation">
                     <button type="button" onclick="prevStep()">&#x2190; Précédent</button>
-                    <button type="submit">Envoyer &#x2714;</button>
+                    <button type="submit">Submit</button>
                 </div>
             </div>
 
