--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             <!-- Step 2 -->
             <div class="step">
                 <div class="question">
-                    <label for="budget">Quel budget êtes-vous prêt(e) à investir par prestation ? (en CFA)</label>
+                    <label for="budget">Quel budget êtes-vous prêt(e) à investir par prestation ? (en FCFA)</label>
                     <input type="range" id="budget" name="budget" min="10000" max="100000" step="5000" value="50000" oninput="updateBudgetValue(this.value)" required>
-                    <p>Budget choisi : <span id="budgetValue">50 000</span> CFA</p>
+                    <p>Budget choisi : <span id="budgetValue">50 000</span> FCFA</p>
                 </div>
                 <div class="question">
                     <label>Seriez-vous intéressé(e) par des produits ménagers écologiques ?</label>
